--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.1.0",
+    "@angular/animations": "^17.3.4",
     "@angular/cdk": "^17.3.4",
     "@angular/common": "^17.1.0",
     "@angular/compiler": "^17.1.0",
@@ -22,6 +22,7 @@
     "@angular/platform-server": "^17.1.0",
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.1.1",
+    "angular-animations": "^0.11.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
